--- a/css/productos.css
+++ b/css/productos.css
@@ -1,11 +1,11 @@
-.card__container {
+.card-container {
     display: flex;
     row-gap: 6rem;
     column-gap: 5rem;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 1.25rem;
     margin-bottom: 12.5rem;
 }
 
@@ -36,9 +36,9 @@
 }
 
 .card-content p {
-    font-size: 1rem;
+    font-size: .75rem;
     color: #7a7a7a;
-    margin: .625rem 0;
+    margin: 5px 0;
     line-height: 1.6;
 }
 
@@ -70,7 +70,6 @@
 .buy-btn:hover {
     background-color: #0e5c2e;
 }
-
 
 .card:hover {
     box-shadow: 0 .75rem 1.5rem rgba(0, 0, 0, 0.2);
