--- a/css/carrito.css
+++ b/css/carrito.css
@@ -19,8 +19,7 @@ table {
     margin-bottom: 1.25rem;
 }
 
-th,
-td {
+th, td {
     padding: .75rem;
     text-align: center;
     border-bottom: .0625rem solid #ddd;
@@ -31,11 +30,6 @@ td {
     font-weight: bold;
 }
 
-/* input[type="number"] {
-    width: 60px;
-    padding: 5px;
-    text-align: center;
-} */
 
 .btn-eliminar {
     background-color: #ff4d4d;
