se agregaron productos, se agrego un filtro de busqueda por marca en la nav, y se agregaron librerias para mostrar cuando se agrega un pŕoducto al carrito, y cuanto el producto no tiene suficiente stock, y se le dieron estilos

--- a/css/carrito.css
+++ b/css/carrito.css
@@ -66,9 +66,14 @@ th, td {
     cursor: pointer;
     border-radius: .3125rem;
     text-align: center;
-    transition: background-color 0.3s, transform 0.3s;
+    transition: background-color 0.3s, transform 0.2s;
 }
 
 .btn-finalizar:hover {
-    background-color: #0e5c2e;
+    background-color: #208d4e;
+}
+
+.btn-finalizar:active {
+    background-color: #0e5c2e; 
+    transform: scale(0.99); 
 }
