--- a/css/productos.css
+++ b/css/productos.css
@@ -28,9 +28,9 @@
     background-color: #fff;
 }
 
-.card-content h3 {
+.card-content h5 {
     margin: .625rem 0;
-    font-size: 1.2em;
+    font-size: 1rem;
     color: #242424;
 }
 
