--- a/css/carrito.css
+++ b/css/carrito.css
@@ -1,33 +1,68 @@
-.carrito-container {
+aside{
+    position: fixed;
+    z-index: 9;
     background-color: #fff;
-    box-shadow: 0 0 .625rem rgba(0, 0, 0, 0.1);
-    border-radius: .5rem;
-    margin: 0 auto 3rem auto;
-    padding: 3rem 1.25rem;
-    width: 90%;
+    right: 0;
+    top: 0;
+    height: 100%;
+    padding: 6rem 2rem 3rem 2rem;
+    box-shadow: 0 0 0 100vmax #000000bf;
+    transform: translateX(100%);
+    opacity: 0;
+    visibility: hidden;
+    max-width: 43.75rem;
+    transition: 0.3s;    
 }
 
-h2 {
-    text-align: center;
+.aside-visible{
+    transform: translateX(0);
+    opacity: 1;
+    visibility: visible;
+}
+
+.aside-header{
+    display: flex;
+    align-items: centera;
+    justify-content: space-between;
+    margin-bottom: 3rem;
+}   
+
+.aside-header button{
+    background-color: transparent;
+    border: 0;
+    color: #ff4d4d;
+    cursor: pointer;
+    filter: drop-shadow(.0625rem .0625rem .0625rem rgba(1, 1, 1, 0.226));
+    font-size: 1.5rem;
+}
+
+
+.aside-header h3 {
     color: #333;
-    margin-bottom: 48px;
+    font-size: 2rem;
+}
+
+.aside-header h3 i{
+    color: #253a55;
+    margin-left: .625rem ;
 }
 
 table {
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 1.25rem;
+    
 }
 
 th, td {
     padding: .75rem;
     text-align: center;
     border-bottom: .0625rem solid #ddd;
+    font-size: .875rem;
 }
 
 .carrito-header {
-    background-color: #f8f8f8;
-    font-weight: bold;
+    background-color: #f8f8f8; 
 }
 
 
