--- a/css/header.css
+++ b/css/header.css
@@ -7,6 +7,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 6;
 }
 
 .nav__bar {
@@ -59,7 +60,7 @@
 }
 
 .cart__container i {
-    font-size: 1.75rem;
+    font-size: 2rem;
     color: #fff;
     cursor: pointer;
 }
