--- a/css/styles.css
+++ b/css/styles.css
@@ -8,11 +8,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #fdfdfd;
+    background-color: #fcfafaef;
     
 }
 
-main{
-    max-width: 90rem;
-    margin: 0 auto;
-}
